infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: applinh/client

---

apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
spec:
  selector:
    app: client
  type: ClusterIP # Default type for a service is already ClusterIP
  ports:
  - name: client
    protocol: TCP
    port: 80
    targetPort: 80
