infra/k8s/posts-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: NodePort
  selector:
    app: posts # Matches a deployment
  ports:
  - name: posts
    protocol: TCP
    port: 4000 # Opened port on the service
    targetPort: 4000 # Port of pod
